<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lenovo.application1.MainActivity">


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:background="@color/yellow"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/main_button"
        android:onClick="gotoHome"

        />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/search"
    android:id="@+id/main_search"
    android:onClick="browser"

    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/main_addevent"
        android:onClick="gotoevent"

        />
</LinearLayout>
